# RARE-ResumeAnalysisRankingEngine

./: .env.example  .gitignore  README.md  abuneshcompanyresume.jsonl  benchmark_integration.py  main.py  pipeline_integration.py  pipeline_optimized.py  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json
frontend/src/: main.tsx
frontend/src/app/: router.tsx
frontend/src/layouts/: AppLayout.tsx
frontend/src/pages/: ActiveRankings.tsx  Analytics.tsx  Candidates.tsx  Dashboard.tsx  History.tsx  Reports.tsx  Settings.tsx  (+3 more)
resume_embedding/: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  run-terminalcode.txt
resume_embedding/.github/: pull_request_template.md
resume_embedding/scripts/: benchmark.py  run_dataset.py  run_sample.py
resume_embedding/tests/: conftest.py  test_candidate_parser.py  test_checkpoint.py  test_config_yaml.py  test_embedder.py  test_metadata_writer.py  test_normalizer.py  test_npy_writer.py  test_pipeline_integration.py  test_text_builder.py  test_validation.py
resume_embedding/viewer/: view_embeddings.py
services/ranking/: __init__.py  layerwise_engine.py  schemas.py
services/resume_embedding/: .gitignore  COMMANDS.md  LICENSE  README.md  pyproject.toml
services/resume_embedding/configs/: default.yaml  model.yaml
services/resume_embedding/resume_embedding/: __init__.py  main.py
services/resume_embedding/resume_embedding/app/: __init__.py  config.py  input.py  io.py  main.py  model.py  pipeline.py
services/resume_embedding/scripts/: benchmark.py  run_dataset.py  run_sample.py
services/resume_embedding/tests/: conftest.py  test_candidate_parser.py  test_checkpoint.py  test_config_yaml.py  test_embedder.py  test_image_reader.py  test_input_dispatcher.py  test_markdown_reader.py  test_metadata_writer.py  test_normalizer.py  test_npy_writer.py  test_pdf_reader.py  test_pipeline_integration.py  test_resume_normalizer.py  test_text_builder.py  test_text_reader.py  test_validation.py
services/resume_embedding/viewer/: view_embeddings.py
services/storage/: README.md  __init__.py  app.py  config.py  qdrant_setup.py  retrieval.py  sample_resumes.py
tests/: test_layerwise_engine.py  test_storage.py
(+29 files in other folders)
